--- a/src/components/BioCard/BioCard.module.css
+++ b/src/components/BioCard/BioCard.module.css
@@ -11,7 +11,7 @@
     cursor: pointer;
     display: flex;
     /* flex-direction: column; */
-    box-shadow: 0 2px 8px rgba(249, 243, 243, 0.1);
+    /* box-shadow: 0 2px 8px rgba(249, 243, 243, 0.1); */
     transition: transform 0.2s ease;
   }
   .card:hover {
